<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intervention">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:id="@+id/back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervention"
            android:textSize="20dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:background="@drawable/border_only"
        android:hint="@string/eg_tree_plantation_drive"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:text="@string/site"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/border_only"
        android:hint="@string/eg_nashik_indira_nagar"
        app:layout_constraintBottom_toTopOf="@+id/editTextText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervention_type"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/border_only"
        android:ems="10"
        android:hint="@string/eg_top_soil_removal"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextText9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervention_date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/eg_25_june_2024"
        android:background="@drawable/border_only"
        app:layout_constraintBottom_toTopOf="@+id/editTextText10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/border_only"
        android:ems="10"
        android:hint="@string/eg_abc_nagar"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="88dp"
        android:text="@string/submit"
        android:backgroundTint="#03714F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>