<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelfPlant">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral100"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_menu_24"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_for_globe"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pick_location_for_tree_planting_n_plant_trees_save_the_world"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="214dp"
        android:layout_height="201dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:contentDescription="TODO"
        android:src="@drawable/add_plant_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_only"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter your Address"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/State" />

    <EditText
        android:id="@+id/country"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_only"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter Country"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/State"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_only"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="Enter State"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <EditText
        android:id="@+id/select_radius"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_only"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="Enter Radius from 0km - 100km"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#03714F"
        android:text="Plant Now"
        android:id="@+id/plantnow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_radius"
        app:layout_constraintVertical_bias="0.403" />


</androidx.constraintlayout.widget.ConstraintLayout>